--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint --ext .js,.vue src",
-    "type-check": "tsc"
+    "type-check": "tsc",
+    "fetch-openapi": "node scripts/fetchOpenapi.js",
+    "start-mock": "prism mock -d scripts/traPortfolio.v1.yaml",
+    "postinstall": "npm run fetch-openapi"
   },
   "dependencies": {
     "direct-vuex": "^0.12.0",
@@ -14,6 +17,7 @@
     "vuex": "^4.0.0-beta.4"
   },
   "devDependencies": {
+    "@stoplight/prism-cli": "^4.1.0",
     "@typescript-eslint/eslint-plugin": "^4.2.0",
     "@typescript-eslint/parser": "^4.2.0",
     "@vue/compiler-sfc": "^3.0.0",
@@ -22,6 +26,7 @@
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-vue": "^7.0.0-beta.3",
+    "node-fetch": "^2.6.1",
     "prettier": "^2.1.2",
     "sass": "^1.26.11",
     "typescript": "^4.0.3",
