--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vite-boilerplate-plus",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "concurrently \"vite\" \"npm run start-mock\"",
     "build": "vite build",
     "lint": "eslint --ext .js,.vue src",
     "type-check": "tsc",
@@ -22,6 +22,7 @@
     "@typescript-eslint/parser": "^4.2.0",
     "@vue/compiler-sfc": "^3.0.0",
     "autoprefixer": "^9.8.6",
+    "concurrently": "^5.3.0",
     "eslint": "^7.10.0",
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-prettier": "^3.1.4",
