--- a/package.json
+++ b/package.json
@@ -12,26 +12,26 @@
   },
   "dependencies": {
     "direct-vuex": "^0.12.0",
-    "vue": "^3.0.0",
-    "vue-router": "^4.0.0-beta.12",
-    "vuex": "^4.0.0-beta.4"
+    "vue": "^3.0.3",
+    "vue-router": "^4.0.0-rc.6",
+    "vuex": "^4.0.0-rc.2"
   },
   "devDependencies": {
-    "@stoplight/prism-cli": "^4.1.0",
-    "@typescript-eslint/eslint-plugin": "^4.2.0",
-    "@typescript-eslint/parser": "^4.2.0",
-    "@vue/compiler-sfc": "^3.0.0",
+    "@stoplight/prism-cli": "^4.1.1",
+    "@typescript-eslint/eslint-plugin": "^4.9.0",
+    "@typescript-eslint/parser": "^4.9.0",
+    "@vue/compiler-sfc": "^3.0.3",
     "autoprefixer": "^9.8.6",
     "concurrently": "^5.3.0",
-    "eslint": "^7.10.0",
-    "eslint-config-prettier": "^6.12.0",
+    "eslint": "^7.14.0",
+    "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-vue": "^7.0.0-beta.3",
+    "eslint-plugin-vue": "^7.1.0",
     "node-fetch": "^2.6.1",
-    "prettier": "^2.1.2",
-    "sass": "^1.26.11",
-    "typescript": "^4.0.3",
-    "vite": "^1.0.0-rc.4"
+    "prettier": "^2.2.1",
+    "sass": "^1.29.0",
+    "typescript": "^4.1.2",
+    "vite": "^1.0.0-rc.13"
   },
   "private": true
 }
