--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "postinstall": "npm run fetch-openapi"
   },
   "dependencies": {
+    "@iconify/iconify": "^1.0.7",
     "direct-vuex": "^0.12.0",
     "vue": "^3.0.3",
     "vue-router": "^4.0.0-rc.6",
     "vuex": "^4.0.0-rc.2"
   },
   "devDependencies": {
+    "@iconify/json": "^1.1.266",
     "@stoplight/prism-cli": "^4.1.1",
     "@typescript-eslint/eslint-plugin": "^4.9.0",
     "@typescript-eslint/parser": "^4.9.0",
@@ -31,7 +33,8 @@
     "prettier": "^2.2.1",
     "sass": "^1.29.0",
     "typescript": "^4.1.2",
-    "vite": "^1.0.0-rc.13"
+    "vite": "^1.0.0-rc.13",
+    "vite-plugin-purge-icons": "^0.4.5"
   },
   "private": true
 }
