--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "type-check": "tsc",
     "fetch-openapi": "node scripts/fetchOpenapi.js",
     "gen-api": "node scripts/generateApi.js",
-    "start-mock": "prism mock -d scripts/traPortfolio.v1.yaml",
+    "start-mock": "prism mock -p 4010 -d scripts/traPortfolio.v1.yaml",
     "clean": "rimraf scripts/traPorfolio.v1.yaml src/lib/apis/generated",
     "postinstall": "npm run fetch-openapi && npm run gen-api"
   },
