--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "concurrently \"vite\" \"npm run start-mock\"",
     "build": "vite build",
-    "lint": "eslint --ext .js,.vue src",
+    "lint": "eslint --ext .ts,.vue src",
     "type-check": "tsc",
     "fetch-openapi": "node scripts/fetchOpenapi.js",
     "gen-api": "node scripts/generateApi.js",
