--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@stoplight/prism-cli": "^4.1.2",
     "@typescript-eslint/eslint-plugin": "^4.11.0",
     "@typescript-eslint/parser": "^4.11.0",
+    "@vitejs/plugin-vue": "^1.0.4",
     "@vue/compiler-sfc": "^3.0.4",
     "autoprefixer": "^9.8.6",
     "concurrently": "^5.3.0",
@@ -40,8 +41,8 @@
     "sass": "^1.30.0",
     "ts-morph": "^9.1.0",
     "typescript": "^4.1.3",
-    "vite": "^1.0.0-rc.13",
-    "vite-plugin-purge-icons": "^0.4.5"
+    "vite": "^2.0.0-beta.10",
+    "vite-plugin-purge-icons": "^0.5.0"
   },
   "private": true
 }
