--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@iconify/iconify": "^1.0.7",
     "axios": "^0.21.1",
     "direct-vuex": "^0.12.0",
+    "pinia": "^2.0.28",
     "ress": "^5.0.2",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
