--- a/package.json
+++ b/package.json
@@ -15,12 +15,10 @@
   "dependencies": {
     "@iconify/iconify": "^1.0.7",
     "axios": "^0.21.1",
-    "direct-vuex": "^0.12.0",
     "pinia": "^2.0.28",
     "ress": "^5.0.2",
     "vue": "^3.2.45",
-    "vue-router": "^4.1.6",
-    "vuex": "^4.0.0-rc.2"
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@iconify/json": "^1.1.277",
