--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,22 +11,24 @@ jobs:
     name: Packages
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/setup-node@v1
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
-          node-version: 14.x
-      - uses: actions/checkout@v2
+          node-version-file: .node-version
+          cache: npm
       - run: SKIP_GENAPI=1 npm ci
   genApi:
     name: Generate APIs
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/setup-node@v1
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
-          node-version: 14.x
-      - uses: actions/checkout@v2
+          node-version-file: .node-version
+          cache: npm
       - run: SKIP_GENAPI=1 npm ci
       - run: npm run postinstall
-      - uses: actions/upload-artifact@v2
+      - uses: actions/upload-artifact@v3
         with:
           name: apis
           path: ./src/lib/apis/generated
@@ -35,12 +37,13 @@ jobs:
     runs-on: ubuntu-latest
     needs: [packages, genApi]
     steps:
-      - uses: actions/setup-node@v1
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
-          node-version: 14.x
-      - uses: actions/checkout@v2
+          node-version-file: .node-version
+          cache: npm
       - run: SKIP_GENAPI=1 npm ci
-      - uses: actions/download-artifact@v2
+      - uses: actions/download-artifact@v3
         with:
           name: apis
           path: ./src/lib/apis/generated
@@ -52,27 +55,45 @@ jobs:
     runs-on: ubuntu-latest
     needs: [packages, genApi]
     steps:
-      - uses: actions/setup-node@v1
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
-          node-version: 14.x
-      - uses: actions/checkout@v2
+          node-version-file: .node-version
+          cache: npm
       - run: SKIP_GENAPI=1 npm ci
-      - uses: actions/download-artifact@v2
+      - uses: actions/download-artifact@v3
         with:
           name: apis
           path: ./src/lib/apis/generated
       - run: npm run lint
+  format:
+    name: Format
+    runs-on: ubuntu-latest
+    needs: [packages, genApi]
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version-file: .node-version
+          cache: npm
+      - run: SKIP_GENAPI=1 npm ci
+      - uses: actions/download-artifact@v3
+        with:
+          name: apis
+          path: ./src/lib/apis/generated
+      - run: npm run format
   typeCheck:
     name: Type Check
     runs-on: ubuntu-latest
     needs: [packages, genApi]
     steps:
-      - uses: actions/setup-node@v1
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
-          node-version: 14.x
-      - uses: actions/checkout@v2
+          node-version-file: .node-version
+          cache: npm
       - run: SKIP_GENAPI=1 npm ci
-      - uses: actions/download-artifact@v2
+      - uses: actions/download-artifact@v3
         with:
           name: apis
           path: ./src/lib/apis/generated
