--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "concurrently \"vite\" \"npm run start-mock\"",
+    "serve": "vite preview",
     "build": "vite build",
     "format": "prettier --check src",
     "fix:format": "prettier --write src",
@@ -15,32 +16,32 @@
     "postinstall": "npm run fetch-openapi && npm run gen-api"
   },
   "dependencies": {
-    "@iconify/iconify": "^3.0.1",
-    "axios": "^1.2.2",
-    "pinia": "^2.0.28",
+    "@iconify/iconify": "^3.1.1",
+    "axios": "^1.5.1",
+    "pinia": "^2.1.6",
     "ress": "^5.0.2",
-    "vue": "^3.2.45",
-    "vue-router": "^4.1.6"
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
-    "@iconify/json": "^2.2.2",
-    "@openapitools/openapi-generator-cli": "^2.5.2",
-    "@stoplight/prism-cli": "^4.10.5",
-    "@typescript-eslint/eslint-plugin": "^5.48.0",
-    "@typescript-eslint/parser": "^5.48.0",
-    "@vitejs/plugin-vue": "^4.0.0",
-    "autoprefixer": "^10.4.13",
-    "concurrently": "^7.6.0",
-    "eslint": "^8.31.0",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-vue": "^9.8.0",
+    "@iconify/json": "^2.2.126",
+    "@openapitools/openapi-generator-cli": "^2.7.0",
+    "@stoplight/prism-cli": "^5.3.2",
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "@typescript-eslint/parser": "^6.7.4",
+    "@vitejs/plugin-vue": "^4.4.0",
+    "autoprefixer": "^10.4.16",
+    "concurrently": "^8.2.1",
+    "eslint": "^8.51.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-vue": "^9.17.0",
     "node-fetch": "^2.6.7",
-    "prettier": "^2.8.1",
-    "rimraf": "^3.0.2",
-    "sass": "^1.57.1",
-    "ts-morph": "^17.0.1",
-    "typescript": "^4.9.4",
-    "vite": "^4.0.4",
+    "prettier": "^3.0.3",
+    "rimraf": "^5.0.5",
+    "sass": "^1.69.0",
+    "ts-morph": "^20.0.0",
+    "typescript": "^5.2.2",
+    "vite": "^4.4.11",
     "vite-plugin-purge-icons": "^0.9.2"
   },
   "private": true
