--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,8 +5,24 @@ updates:
     schedule:
       interval: monthly
     open-pull-requests-limit: 10
+    groups:
+      types:
+        patterns:
+          - '@types/*'
+      formatter:
+        patterns:
+          - '*eslint*'
+          - '*prettier*'
+      patches:
+        update-types:
+          - 'patch'
+
   - package-ecosystem: github-actions
     directory: '/'
     schedule:
       interval: monthly
     open-pull-requests-limit: 10
+    groups:
+      actions-deps:
+        patterns:
+          - '*'
