--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "ts-morph": "^22.0.0",
     "typescript": "^5.2.2",
     "vite": "^4.5.0",
-    "vite-plugin-purge-icons": "^0.9.2"
+    "vite-plugin-purge-icons": "^0.9.2",
+    "vue-tsc": "^2.0.19"
   },
   "private": true
 }
