--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,7 +64,7 @@ jobs:
         with:
           name: apis
           path: ./src/lib/apis/generated
-      - run: npm run lint
+      - run: npm run lint:nofix
   format:
     name: Format
     runs-on: ubuntu-latest
@@ -80,7 +80,7 @@ jobs:
         with:
           name: apis
           path: ./src/lib/apis/generated
-      - run: npm run format
+      - run: npm run format:nofix
   typeCheck:
     name: Type Check
     runs-on: ubuntu-latest
