step nameの先頭を大文字に統一

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -21,9 +21,9 @@ jobs:
         with:
           node-version-file: ./.node-version
           cache: npm
-      - name: node package install
+      - name: Node package install
         run: npm ci
-      - name: vite build
+      - name: Vite build
         run: npm run build
         env:
           NODE_ENV: production
