最終のDockerfileからAPIからの自動生成部分を分離

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,9 @@ jobs:
         with:
           node-version-file: .node-version
           cache: npm
-      - run: SKIP_GENAPI=1 npm ci
+      - run: npm ci
+        env:
+          SKIP_GENAPI: 1
   genApi:
     name: Generate APIs
     runs-on: ubuntu-latest
@@ -41,7 +43,9 @@ jobs:
         with:
           node-version-file: .node-version
           cache: npm
-      - run: SKIP_GENAPI=1 npm ci
+      - run: npm ci
+        env:
+          SKIP_GENAPI: 1
       - uses: actions/download-artifact@v4
         with:
           name: apis
@@ -59,7 +63,9 @@ jobs:
         with:
           node-version-file: .node-version
           cache: npm
-      - run: SKIP_GENAPI=1 npm ci
+      - run: npm ci
+        env:
+          SKIP_GENAPI: 1
       - uses: actions/download-artifact@v4
         with:
           name: apis
@@ -75,7 +81,9 @@ jobs:
         with:
           node-version-file: .node-version
           cache: npm
-      - run: SKIP_GENAPI=1 npm ci
+      - run: npm ci
+        env:
+          SKIP_GENAPI: 1
       - uses: actions/download-artifact@v4
         with:
           name: apis
@@ -91,7 +99,9 @@ jobs:
         with:
           node-version-file: .node-version
           cache: npm
-      - run: SKIP_GENAPI=1 npm ci
+      - run: npm ci
+        env:
+          SKIP_GENAPI: 1
       - uses: actions/download-artifact@v4
         with:
           name: apis
