--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,9 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
-    needs: [packages, genApi]
+    needs:
+      - packages
+      - genApi
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
@@ -56,7 +58,9 @@ jobs:
   lint:
     name: Lint
     runs-on: ubuntu-latest
-    needs: [packages, genApi]
+    needs:
+      - packages
+      - genApi
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
@@ -74,7 +78,9 @@ jobs:
   format:
     name: Format
     runs-on: ubuntu-latest
-    needs: [packages, genApi]
+    needs:
+      - packages
+      - genApi
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
@@ -92,7 +98,9 @@ jobs:
   typeCheck:
     name: Type Check
     runs-on: ubuntu-latest
-    needs: [packages, genApi]
+    needs:
+      - packages
+      - genApi
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
