--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -29,7 +29,8 @@ jobs:
       contents: read
       packages: write
     runs-on: ubuntu-latest
-    needs: [genApi]
+    needs:
+      - genApi
     steps:
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
@@ -52,7 +53,8 @@ jobs:
   deploy-staging:
     name: Deploy staging
     runs-on: ubuntu-latest
-    needs: [image]
+    needs:
+      - image
     steps:
       - name: Install SSH key
         uses: shimataro/ssh-key-action@v2
