--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -20,6 +20,7 @@ jobs:
           node-version-file: .node-version
           cache: npm
       - run: npm ci
+      - run: npm run gen-api
       - uses: actions/upload-artifact@v4
         with:
           name: apis
