--- a/.github/workflows/pr-agent.yaml
+++ b/.github/workflows/pr-agent.yaml
@@ -1,9 +1,14 @@
 name: PR Agent
 on:
   pull_request:
-    types: ready_for_review
+    types:
+      - ready_for_review
+      - opened
   issue_comment:
-    types: [created, edited]
+    types:
+      - created
+      - edited
+
 jobs:
   pr_agent_job:
     if: ${{github.event.sender.type != 'Bot' && github.event.pull_request.draft == false}}
