genAIのリポジトリの修正にあわせて修正

--- a/.github/workflows/pr-agent.yaml
+++ b/.github/workflows/pr-agent.yaml
@@ -30,7 +30,5 @@ jobs:
           GITHUB_ACTION.AUTO_IMPROVE: 'false'
           PR_REVIEWER.EXTRA_INSTRUCTIONS: '必ず日本語で回答してください'
           PR_DESCRIPTION.PUBLISH_LABELS: 'false'
-          PR_DESCRIPTION.PUBLISH_DESCRIPTION_AS_COMMENT: 'true'
-          PR_DESCRIPTION.KEEP_ORIGINAL_USER_TITLE: 'false'
-          PR_DESCRIPTION.ADD_ORIGINAL_USER_DESCRIPTION: 'false'
-          PR_DESCRIPTION.EXTRA_INSTRUCTIONS: 'Please use Japanese in descriptions. Titles should have prefix of commitlint pattern such as `feat:`, `chore:`, `test:`, `fix:`, `ci:`, `docs:` etc'
+          PR_DESCRIPTION.ADD_ORIGINAL_USER_DESCRIPTION: 'true'
+          PR_DESCRIPTION.EXTRA_INSTRUCTIONS: 'Please use Japanese in descriptions.'
