--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "traportfolio",
   "version": "0.0.0",
   "scripts": {
-    "dev": "concurrently \"vite\" \"npm run start-mock\"",
+    "dev": "vite",
     "serve": "vite preview",
     "build": "vite build",
     "lint": "eslint --fix --cache --ext .ts,.vue src",
@@ -22,7 +22,6 @@
   },
   "devDependencies": {
     "@iconify/vue": "^4.1.2",
-    "@stoplight/prism-cli": "^5.8.1",
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@typescript-eslint/parser": "^7.8.0",
     "@vitejs/plugin-vue": "^5.1.1",
