--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -1,9 +1,9 @@
-name: Build image (master)
+name: Build image (main)
 
 on:
   push:
     branches:
-      - master
+      - main
 
 env:
   IMAGE_NAME: traportfolio-ui
