--- a/package.json
+++ b/package.json
@@ -21,21 +21,22 @@
     "vue-router": "^4.4.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.13.0",
     "@iconify/vue": "^4.1.2",
-    "@typescript-eslint/eslint-plugin": "^7.8.0",
-    "@typescript-eslint/parser": "^7.8.0",
+    "@types/eslint__js": "^8.42.3",
     "@vitejs/plugin-vue": "^5.1.1",
     "autoprefixer": "^10.4.19",
     "concurrently": "^8.2.2",
-    "eslint": "^8.56.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-vue": "^9.17.0",
+    "eslint": "^9.13.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-vue": "^9.29.0",
     "node-fetch": "^3.3.2",
     "prettier": "^3.0.3",
     "rimraf": "^6.0.1",
     "sass": "^1.77.6",
     "ts-morph": "^23.0.0",
-    "typescript": "^5.5.2",
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.10.0",
     "vite": "^5.4.6",
     "vue-tsc": "^2.0.24"
   },
