--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "dev": "vite",
     "serve": "vite preview",
     "build": "vite build",
-    "lint": "eslint --fix --cache --ext .ts,.vue src",
-    "lint:nofix": "eslint --cache --ext .ts,.vue src",
+    "lint": "eslint --fix --cache src",
+    "lint:nofix": "eslint --cache src",
     "format": "prettier --cache --write \"src/**/*.{vue,ts}\"",
     "format:nofix": "prettier --cache --check \"src/**/*.{vue,ts}\"",
     "type-check": "vue-tsc --noEmit",
