--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@eslint/js": "^9.13.0",
     "@iconify/vue": "^4.1.2",
     "@types/eslint__js": "^8.42.3",
+    "@types/node": "^22.7.7",
     "@vitejs/plugin-vue": "^5.1.1",
     "autoprefixer": "^10.4.19",
     "concurrently": "^8.2.2",
