fix: ESLint と Prettier の競合を解消した (Prettier に寄せた)

--- a/.prettierrc
+++ b/.prettierrc
@@ -17,5 +17,6 @@
   "proseWrap": "preserve",
   "htmlWhitespaceSensitivity": "css",
   "vueIndentScriptAndStyle": false,
-  "endOfLine": "auto"
+  "endOfLine": "auto",
+  "singleAttributePerLine": true
 }
