--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint": "^9.13.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-vue": "^9.29.1",
+    "msw": "^2.7.0",
     "node-fetch": "^3.3.2",
     "prettier": "^3.0.3",
     "sass": "^1.77.6",
